generated/generated-cluster/base/frontend/sourcegraph-frontend.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Serves the frontend of Sourcegraph via HTTP(S).
  labels:
    deploy: sourcegraph
  name: sourcegraph-frontend
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: sourcegraph-frontend
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sourcegraph-frontend
    spec:
      containers:
      - args:
        - serve
        image: index.docker.io/sourcegraph/frontend:insiders@sha256:6a69d89c7973bb286536fa0ff22624818ca51a2f0427dd32809190b940fe557a
        terminationMessagePolicy: FallbackToLogsOnError
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 300
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        name: frontend
        ports:
        - containerPort: 3080
          name: http
        - containerPort: 3090
          name: http-internal
        resources:
          limits:
            cpu: 8000m
            memory: 6G
          requests:
            cpu: 6000m
            memory: 4G
        volumeMounts:
        - mountPath: /mnt/cache
          name: cache-ssd
      - image: sourcegraph/jaeger-agent:3.15.0@sha256:dc476845a723dce8e44ce07a50b5abb218ec86cb9d75b0ca9601df76db1fb65b
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
        args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
      securityContext:
        runAsUser: 0
      serviceAccountName: sourcegraph-frontend
      volumes:
      - emptyDir: {}
        name: cache-ssd
