generated/generated-cluster/base/frontend/sourcegraph-frontend.Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # We can upload large files (extensions)
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    # See
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    # for more nginx annotations.

    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: 1d
  labels:
    app: sourcegraph-frontend
    deploy: sourcegraph
  name: sourcegraph-frontend
spec:
  # See the customization guide (../../../docs/configure.md) for information
  # about configuring TLS
  # tls:
  # - hosts:
  #   - sourcegraph.example.com
  #   secretName: sourcegraph-tls
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sourcegraph-frontend
          servicePort: 30080
    # If you're using TLS/SSL, uncomment the following line and replace 'sourcegraph.example.com' with the real
    # domain that you want to use for your Sourcegraph instance.
    # host: sourcegraph.example.com

    host: k8s.sgdev.org
  tls:
  - hosts:
    - k8s.sgdev.org
    secretName: sourcegraph-tls
